<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorDataCollector">

    <RadioGroup
        android:id="@+id/rad_btn_activity_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:checkedButton="@id/rad_btn_walking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rad_btn_walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/rad_btn_walking" />

        <RadioButton
            android:id="@+id/rad_btn_running"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/rad_btn_running" />

        <RadioButton
            android:id="@+id/rad_btn_standing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/rad_btn_standing" />

        <RadioButton
            android:id="@+id/rad_btn_sitting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/rad_btn_sitting" />

        <RadioButton
            android:id="@+id/rad_btn_upstairs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/rad_btn_upstairs" />

        <RadioButton
            android:id="@+id/rad_btn_downstairs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/rad_btn_downstairs" />

        <RadioButton
            android:id="@+id/rad_btn_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Other" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_start_stop"
        app:layout_constraintEnd_toStartOf="@+id/btn_pause_resume"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_save_dir" />

    <Button
        android:id="@+id/btn_pause_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_pause_resume"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_start_stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_start_stop" />

    <EditText
        android:id="@+id/text_view_save_dir"
        android:layout_width="133dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Save directory"
        android:inputType="text"
        android:text="trial_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rad_btn_activity_selection" />

    <Button
        android:id="@+id/btn_detect_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Start monitoring"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_stop" />

</androidx.constraintlayout.widget.ConstraintLayout>